fix top navbar getting behind some elements when it shoudl be on top

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ a {
     position: fixed;
     font-weight: 500;
     color: rgba(255, 255, 255, 0.8);
-    z-index: 2;
+    z-index: 15;
 }
 
 .topNavbarContent {
